# fluid

./: .env.docker  .env.example  docker-compose.yml  pnpm-lock.yaml
admin-dashboard/: Dockerfile  package.json
admin-dashboard/src/: currencyConversion.test.ts  currencyConversion.ts
client/: REACT_NATIVE.md  package.json
client/src/: FluidClient.ts  errors.ts  index.ts  react-native.ts
client/test/: cli.test.ts  errors.test.ts  parity.test.ts  react-native.test.ts
docs/: cli-transaction-simulator.md  configurable-max-operations-limit.md  cross-chain-bridge-relay.md  currency-conversion.md  error-wiki.md  feature-expansion.md  identity-registry-did.md  network_latency_simulation.md  parity-compliance-report.md  react-native-starter-kit.md  soroban-integration-tests.md  soroban-verification-report.md  wasm-signing-oom-protections.md  yield-aggregator-vault.md
docs/reports/: performance-reports.md
docs/security/: content-security-policy.md
fluid-server/: Cargo.toml  Dockerfile
fluid-server/src/: benchmarks.rs  config.rs  lib.rs  main.rs  profiling.rs  stellar.rs  xdr.rs
fluid-server/tests/: soroban_integration.rs
k6/: fee_bump_stress.js  load_testing_report.md
server/: Dockerfile  README.md  package.json
server/docs/: mock-horizon-server-overhaul.md  qa-testing-suite.md
server/src/contracts/soroban/royalty-splitter/: Cargo.toml  README.md
server/src/contracts/soroban/royalty-splitter/src/: lib.rs
server/src/contracts/soroban/yield-aggregator-vault/: Cargo.toml
server/src/contracts/soroban/yield-aggregator-vault/src/: lib.rs
(+54 files in other folders)
